@@ -54,6 +54,9 @@ RELEASE NOTES
     compare/3, and callable/1 from all the config files of Prolog compilers
     where these predicates are built-in.
 
+    Added an ugly hack to the Qu-Prolog config file for accessing environment
+    variables.
+
     Updated the GNU Prolog config file in order to support the built_in_fd/0,
     built_in_fd/1, built_in/0, built_in/1, and ensure_linked/1 proprietary
     directives.
